--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,11 +1,12 @@
 * {
+    font-family: 'Noto Sans KR', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Arial', sans-serif;
+    
     background-color: #121212;
     color: #fff;
     display: flex;
@@ -14,20 +15,24 @@ body {
     min-height: 100vh;
 }
 
+
 header {
     text-align: center;
     padding: 20px;
-    background: rgba(255, 255, 255, 0.1);
+    background: linear-gradient(90deg, #ff9a9e, #fad0c4);
     backdrop-filter: blur(10px);
-    border-radius: 10px;
-    margin: 20px;
+    border-radius: 20px;
+    margin: 20px auto;
+    max-width: 800px;
     color: #fff;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
 }
 
 h1 {
     font-size: 2.5rem;
-    font-weight: 300;
-    letter-spacing: 2px;
+    font-weight: 700; /* 두꺼운 글꼴 적용 */
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
 }
 
 main {
@@ -38,9 +43,13 @@ main {
 }
 
 .button-container {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    justify-items: center;
+    align-items: center;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .action-button {
@@ -60,6 +69,16 @@ main {
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 
+/* 문의하기 버튼 차별화 */
+.inquiry-button {
+    background: rgba(255, 69, 58, 0.6); 
+}
+
+.inquiry-button:hover {
+    background: rgba(255, 69, 58, 0.8);
+    box-shadow: 0 10px 40px rgba(255, 69, 58, 0.6);
+}
+
 .action-button:hover {
     transform: scale(1.05);
     background: rgba(255, 255, 255, 0.3);
@@ -69,9 +88,30 @@ footer {
     text-align: center;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
-    padding: 10px;
-    margin: 20px;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 800px;
     border-radius: 10px;
     color: #fff;
-    font-size: 0.9rem;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+footer a {
+    color: #00aaff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.social-links {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+}
+
+.social-links img {
+    width: 30px;
+    height: 30px;
 }
