엑셀쪼개기 1차완성

--- a/templates/excel_seperator.html
+++ b/templates/excel_seperator.html
@@ -30,7 +30,7 @@
                         </p>
                     </div>
                 </div>
-                <button type="submit" class="action-button" disabled>업로드</button>
+                <button type="submit" class="action-button" disabled>파일 읽기</button>
             </form>
         </section>
 
