메일주소수정

--- a/templates/excel_seperator.html
+++ b/templates/excel_seperator.html
@@ -63,7 +63,7 @@
     </main>
 
     <footer>
-        <p>문의: <a href="mailto:leejunhee1219@kakao.com">leejunhee1219@kakao.com</a></p>
+        <p>문의: <a href="mailto:help-whatever@naver.com">help-whatever@naver.com</a></p>
     </footer>
     <script src="{{ url_for('static', filename='excel_scripts.js') }}"></script>
 </body>
