--- a/templates/index.html
+++ b/templates/index.html
@@ -18,16 +18,11 @@
         <section class="button-container">
             <a href="/excel_seperator" class="action-button">엑셀 쪼개기</a>
             <a href="/ppt_extractor" class="action-button">PPT 추출</a>
-            <a href="mailto:leejunhee1219@kakao.com" class="action-button inquiry-button">문의하기</a> <!-- 문의하기 버튼을 같은 섹션에 포함 -->
+            <a href="mailto:help-whatever@naver.com" class="action-button inquiry-button">문의하기</a> <!-- 문의하기 버튼을 같은 섹션에 포함 -->
         </section>
     </main>
     <footer>
-        <p>문의: <a href="mailto:leejunhee1219@kakao.com">leejunhee1219@kakao.com</a></p>
-        <div class="social-links">
-            <a href="#"><img src="icon-facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="icon-instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="icon-twitter.png" alt="Twitter"></a>
-        </div>
+        <p>문의: <a href="mailto:help-whatever@naver.com">help-whatever@naver.com</a></p>
     </footer>
 </body>
 </html>
