준비중입니다 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <main>
         <section class="button-container">
             <a href="/excel_seperator" class="action-button">엑셀 쪼개기</a>
-            <a href="/ppt_extractor" class="action-button">PPT 추출</a>
+            <a class="action-button" onclick = "alert('준비중입니다')">PPT 추출</a>
             <a href="mailto:help-whatever@naver.com" class="action-button inquiry-button">문의하기</a> <!-- 문의하기 버튼을 같은 섹션에 포함 -->
         </section>
     </main>
