--- a/static/styles.css
+++ b/static/styles.css
@@ -6,7 +6,6 @@
 }
 
 body {
-    
     background-color: #121212;
     color: #fff;
     display: flex;
@@ -14,7 +13,6 @@ body {
     justify-content: space-between;
     min-height: 100vh;
 }
-
 
 header {
     text-align: center;
@@ -29,8 +27,8 @@ header {
 }
 
 h1 {
-    font-size: 2.5rem;
-    font-weight: 700; /* 두꺼운 글꼴 적용 */
+    font-size: 1.5rem;
+    font-weight: 700;
     letter-spacing: 1.5px;
     text-transform: uppercase;
 }
@@ -39,17 +37,23 @@ main {
     flex: 1;
     display: flex;
     justify-content: center;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    gap: 30px;
+    max-width: 800px;
+    width: 100%;
 }
 
 .button-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
+    gap: 20px;
     justify-items: center;
     align-items: center;
-    width: 50%;
-    margin: 0 auto;
 }
 
 .action-button {
@@ -57,7 +61,7 @@ main {
     justify-content: center;
     align-items: center;
     width: 150px;
-    height: 150px;
+    height: 80px;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(15px);
     color: white;
@@ -69,9 +73,8 @@ main {
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 
-/* 문의하기 버튼 차별화 */
 .inquiry-button {
-    background: rgba(255, 69, 58, 0.6); 
+    background: #ff453a99;
 }
 
 .button-container .inquiry-button:hover {
@@ -79,10 +82,25 @@ main {
     box-shadow: 0 10px 40px rgba(255, 69, 58, 0.6);
 }
 
-
 .action-button:hover {
     transform: scale(1.05);
     background: rgba(255, 255, 255, 0.3);
+}
+
+.textarea-container {
+    display: flex;
+    gap: 20px;
+}
+
+.custom-textarea {
+    width: 250px;
+    height: 100px;
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    color: white;
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 10px;
 }
 
 footer {
@@ -95,9 +113,6 @@ footer {
     border-radius: 10px;
     color: #fff;
     font-size: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
 }
 
 footer a {
@@ -106,13 +121,26 @@ footer a {
     font-weight: bold;
 }
 
-.social-links {
-    display: flex;
-    gap: 15px;
-    justify-content: center;
+textarea{
+    width: 500px;
+    height: 600px;
+    padding: 10px;
 }
 
-.social-links img {
-    width: 30px;
-    height: 30px;
+.textarea-button{
+    height: 50px !important;
+}
+
+ #copy-message {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f3f3ce;
+    color: rgb(22, 22, 22);
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 1rem;
+    display: none;
+    z-index: 1000;
 }
