--- a/templates/ppt_extractor.html
+++ b/templates/ppt_extractor.html
@@ -100,7 +100,7 @@
     </main>
 
     <footer>
-        <p>문의: <a href="mailto:leejunhee1219@kakao.com">leejunhee1219@kakao.com</a></p>
+        <p>문의/제안: <a href="mailto:help-whatever@naver.com">help-whatever@naver.com</a></p>
     </footer>
     <script src="{{ url_for('static', filename='ppt_extractor.js') }}"></script>
 </body>
