리스트 문자열 기능추가 및 줄바꿈띄어쓰기 텍스트변경

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,10 +31,11 @@
                     <div id="counter2">문자 수: 0</div>
                 </div>
             </section>
-            <section class="button-container" style="grid-template-columns: repeat(4, 1fr);">
+            <section class="button-container" style="grid-template-columns: repeat(5, 1fr);">
                 <a class ="action-button textarea-button" id ="btn1">대문자변경</a>
                 <a class ="action-button textarea-button" id ="btn2">소문자변경</a>
-                <a class ="action-button textarea-button" id ="btn3">줄바꿈 띄어쓰기</a>
+                <a class ="action-button textarea-button" id ="btn3">줄바꿈→띄어쓰기</a>
+                <a class ="action-button textarea-button" id ="btn5">리스트 문자열</a>
                 <a class ="action-button textarea-button" id ="btn4">복사</a>
             </section>
         </div>
@@ -48,6 +49,7 @@
             btn1: false,  // 대문자 변경
             btn2: false,  // 소문자 변경
             btn3: false,  // 줄바꿈 띄어쓰기
+            btn5: false,
         };
 
         const textarea1 = document.getElementById('textarea1');
@@ -80,6 +82,10 @@
                 val = val.replace(/\n/g, ' ');
             }
 
+            if (buttonStates['btn5']) {
+                val = formatLines(val);
+            }
+
             // 변환된 값을 textarea2에 반영
             textarea2.value = val;
 
@@ -89,6 +95,11 @@
 
         // textarea1에 입력 시 이벤트 핸들러 추가
         textarea1.addEventListener('input', handleTextChange);
+
+        textarea2.addEventListener('input', () => {
+            updateCharacterCount(textarea2.value, counter2);
+        });
+        
 
         // Toggle on/off for buttons
         const buttons = document.querySelectorAll('.textarea-button');
@@ -155,6 +166,22 @@
                 console.error('복사 실패: ', err);
             });
         });
+
+        function formatLines(input) {
+            const lines = input.split('\n')
+                .filter(line => line.trim() !== ''); // 공백인 줄 제거
+            let index = 0;
+            const formattedLines = lines.map((line) => {
+                if (index === 0) {
+                    index++;
+                    return `'${line}'`;
+                } else {
+                    return `, '${line}'`;
+                }
+            });
+            return formattedLines.join('');
+        }
+
     </script>
 </body>
 </html>
