--- a/static/excel_seperator_styles.css
+++ b/static/excel_seperator_styles.css
@@ -4,6 +4,23 @@
     box-sizing: border-box;
 }
 
+footer {
+    text-align: center;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    padding: 0px;
+    margin: 20px auto;
+    max-width: 800px;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 1rem;
+}
+
+footer a {
+    color: #00aaff;
+    text-decoration: none;
+    font-weight: bold;
+}
 body {
     font-family: 'Noto Sans KR', sans-serif;
     background-color: #121212;
