다중찾아바꾸기

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
                 <a href="/excel_seperator" class="action-button">엑셀 쪼개기</a>
                 <a href="/ppt_extractor" class="action-button">PPT 추출</a>
                 <a href="/pdf_editor" class="action-button">PDF 이어붙이기</a>
+                <a href="/text_change" class="action-button">다중찾아바꾸기</a>
                 <a href="mailto:help-whatever@naver.com" class="action-button inquiry-button">문의/제안하기</a> <!-- 문의하기 버튼을 같은 섹션에 포함 -->
             </section>
             <section class="textarea-container">
