--- a/templates/pdf_editor.html
+++ b/templates/pdf_editor.html
@@ -426,6 +426,7 @@
         a.click();
         document.body.removeChild(a);
       };
+      alert("pdf 합치기가 완료되었습니다.")
     });
 
     // 초기화 버튼 클릭 시 페이지 새로고침
